--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --font-sans: 'DM Sans', sans-serif;;
   --font-mono: var(--font-geist-mono);
   --font-caveat: 'Caveat', cursive;
+  --font-reenie: 'Reenie Beanie', cursive;
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
